fix(config) : accessibility issue with color contrast and hide config insted of min-height:0

--- a/src/components/VisualizerCard.module.css
+++ b/src/components/VisualizerCard.module.css
@@ -59,5 +59,5 @@
 }
 
 .collapsibleContent.collapsed {
-	max-height: 0;
+	display: none;
 }
